--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> teste </h1>
-    <!--<Script src="sandBox.js"></script>-->
-        <Script src="./"></script>
-
-        
+    <h1>The Bug is On The Table</h1>
+    <script src="ex18.js"></script>
 </body>
 </html>
